// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyncCalloutsPanel renders 1`] = `
<Fragment>
  <EuiFlexItem>
    <EuiCallOut
      color="success"
      iconType="check"
      title="Sync complete"
    >
      Completed at Mon Sep 05 2022 15:59:39 GMT+0000
    </EuiCallOut>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
      iconType="iInCircle"
      title="Sync started manually"
    >
      Started at Mon Sep 05 2022 14:59:39 GMT+0000.
    </EuiCallOut>
  </EuiFlexItem>
</Fragment>
`;

exports[`SyncCalloutsPanel renders canceled job 1`] = `
<Fragment>
  <EuiFlexItem>
    <EuiCallOut
      color="success"
      iconType="check"
      title="Sync complete"
    >
      Completed at Mon Sep 05 2022 15:59:39 GMT+0000
    </EuiCallOut>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="danger"
      iconType="cross"
      title="Sync canceled"
    >
      Sync canceled at .
    </EuiCallOut>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
      iconType="iInCircle"
      title="Sync started manually"
    >
      Started at Mon Sep 05 2022 14:59:39 GMT+0000.
    </EuiCallOut>
  </EuiFlexItem>
</Fragment>
`;

exports[`SyncCalloutsPanel renders different trigger method 1`] = `
<Fragment>
  <EuiFlexItem>
    <EuiCallOut
      color="success"
      iconType="check"
      title="Sync complete"
    >
      Completed at Mon Sep 05 2022 15:59:39 GMT+0000
    </EuiCallOut>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="warning"
      iconType="clock"
      title="In progress"
    >
      Sync has been running for 1h 0m 0s.
    </EuiCallOut>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
      iconType="iInCircle"
      title="Sync started by schedule"
    >
      Started at Mon Sep 05 2022 14:59:39 GMT+0000.
    </EuiCallOut>
  </EuiFlexItem>
</Fragment>
`;

exports[`SyncCalloutsPanel renders error job 1`] = `
<Fragment>
  <EuiFlexItem>
    <EuiCallOut
      color="success"
      iconType="check"
      title="Sync complete"
    >
      Completed at Mon Sep 05 2022 15:59:39 GMT+0000
    </EuiCallOut>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="danger"
      iconType="cross"
      title="Sync failure"
    >
      Sync failure: .
    </EuiCallOut>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
      iconType="iInCircle"
      title="Sync started manually"
    >
      Started at Mon Sep 05 2022 14:59:39 GMT+0000.
    </EuiCallOut>
  </EuiFlexItem>
</Fragment>
`;

exports[`SyncCalloutsPanel renders in progress job 1`] = `
<Fragment>
  <EuiFlexItem>
    <EuiCallOut
      color="success"
      iconType="check"
      title="Sync complete"
    >
      Completed at Mon Sep 05 2022 15:59:39 GMT+0000
    </EuiCallOut>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="warning"
      iconType="clock"
      title="In progress"
    >
      Sync has been running for 1h 0m 0s.
    </EuiCallOut>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
      iconType="iInCircle"
      title="Sync started manually"
    >
      Started at Mon Sep 05 2022 14:59:39 GMT+0000.
    </EuiCallOut>
  </EuiFlexItem>
</Fragment>
`;
